--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["NessajCN"]
 repository = "https://github.com/NessajCN/rkod"
 
 [dependencies]
+image = "0.25"
 libc = "0.2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
