--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/NessajCN/rkod"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+ffmpeg-next = { version = "7.0" }
 image = "0.25"
 libc = "0.2"
 tracing = "0.1"
