forked ffmpeg dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ repository = "https://github.com/NessajCN/rkod"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
-ffmpeg-next = { version = "7.0" }
+ffmpeg-next = { version = "7.0", features = [
+    "rk",
+], git = "https://github.com/NessajCN/rust-ffmpeg-rk" }
 image = "0.25"
 libc = "0.2"
 tracing = "0.1"
