--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/NessajCN/rkod"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+reqwest = { version = "0.12", features = ["json"] }
 ffmpeg-next = { version = "7.0", features = [
     "rk",
 ], git = "https://github.com/NessajCN/rust-ffmpeg-rk" }
