--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 ffmpeg-next = { version = "7.0", features = [
     "rk",
 ], git = "https://github.com/NessajCN/rust-ffmpeg-rk" }
