--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rkod"
 version = "0.4.0"
-edition = "2021"
+edition = "2024"
 authors = ["NessajCN <ksnessaj@hotmail.com>"]
 repository = "https://github.com/NessajCN/rkod"
 
@@ -12,12 +12,10 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-ffmpeg-next = { version = "7.0", features = [
-    "rk",
-], git = "https://github.com/NessajCN/rust-ffmpeg-rk" }
+ffmpeg-the-third = "3.0.2+ffmpeg-7.1"
 image = "0.25"
 libc = "0.2"
-toml = "0.8"
+toml = "0.9"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
